<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lsq_backgroud_default" >

    <org.lasque.tusdk.core.view.widget.TuSdkViewPager
        android:id="@+id/lsq_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lsq_bottomBar" >
    </org.lasque.tusdk.core.view.widget.TuSdkViewPager>

    <RelativeLayout
        android:id="@+id/lsq_bottomBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lsq_backgroud_edit_bar" >

        <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
            android:id="@+id/lsq_cancelButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/lsq_style_default_edit_button_cancel" />

        <RelativeLayout
            android:id="@+id/lsq_categoryWrap"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_toRightOf="@+id/lsq_cancelButton" >

            <LinearLayout
                android:id="@+id/lsq_categoryView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lsq_sticker_cate_default"
                    android:textColor="@color/lsq_color_white"
                    android:textSize="16sp" />

                <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lsq_sticker_cate_watermark"
                    android:textColor="@color/lsq_color_white"
                    android:textSize="16sp" />

                <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lsq_sticker_cate_frame"
                    android:textColor="@color/lsq_color_white"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/lsq_selectedCursor"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/lsq_seekbar_drag_color" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>